# ot-harjoitustyo

./: .coveragerc  .env  README.md  maarittelydokumentti.md  maarittelydokumentti.txt  pyproject.toml  tasks.py  tuntikirjanpito.md  tuntikirjanpito.txt  vaatimusmaarittely.md
dokumentaatio/: .coveragerc  arkkitehtuuri.md  changelog.md  käyttöohje.md  tasks.py  testausdokumentti.md  tuntikirjanpito.md  vaatimusmaarittely.md
dokumentaatio/src/: budget.py  views.py
laskarit/dokumentaatio/: pyproject.toml
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko3/: koneen_sekvenssikaavio.md  matkakortin_sekvenssikaavio.md  monopolikaavio  monopolikaavio.md  tehtava1.md  tehtava2.md  tehtava3.md  tehtava4.md
old_stuff/: backupturns.py  gameloop.py  gamemethods.py  player_decision.py  running_game.py  shuffle.py  start2.py  startmethod.py  testingturn.py  views.py
src/: Computerchoose.py  budget.py  cardhandlers.py  config.py  constants.py  db_connection.py  deck.py  game_loop.py  handlers.py  index.py  initialize_database.py  play.py  shuffle_test.py  update.py
src/entities/: info.py
src/game/: Computerchoose.py  Update.py  backup_of_table.py  cardhandlers.py  cards.py  computerturns.py  constants.py  deck.py  game_loop.py  gameloop.py  gameplay.py  handlers.py  main.py  play.py  rules.py  settingup.py  shuffle.py  start.py  startview.py  update.py  viewclasses.py
src/repositories/: BudgetRepository.py  UserRepository.py
src/services/: BudgetService.py
src/tests/: computerchoose_test.py  game_loop_test.py  handlers_test.py  shuffle_test.py
(+44 files in other folders)
